--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
+/server/node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
