--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "video-uploader",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8085",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
@@ -14,8 +15,8 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
+    "react-s3": "^1.3.1",
     "react-scripts": "4.0.3",
-    "react-spinners": "^0.10.6",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
