--- a/netlify.toml
+++ b/netlify.toml
@@ -12,4 +12,4 @@
   command = "CI= npm run build"
 
 [build.environment]
-  REACT_APP_API_BASE_URL = "https://il-uploader.herokuapp.com/"
+  REACT_APP_API_BASE_URL = "https://il-uploader-api.herokuapp.com/"
